# mapp-nocodb-connector

./: README.md  pyproject.toml  test.csv
mapp_nocodb_connector/: connector.py
